vectorize/vrand/dump.out
randomV.cc: In function ‘int main()’:
randomV.cc:53:36: error: cannot bind ‘std::ostream {aka std::basic_ostream<char>}’ lvalue to ‘std::basic_ostream<char>&&’
    std::cout << typeid(eng2._M_x[0]) << std::endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/iostream:39:0,
                 from randomV.cc:41:
/usr/local/include/c++/4.9.0/ostream:602:5: note: initializing argument 1 of ‘std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = std::type_info]’
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
